--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "docs"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "commitlint": "^19.7.1",
+    "husky": "^9.1.7",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@commitlint/types": "^19.5.0"
   }
 }
