--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
+    "commitizen": "^4.3.1",
     "commitlint": "^19.7.1",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
     "typescript": "^5.7.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "@commitlint/types": "^19.5.0",
