--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "commitizen": "^4.3.1",
     "commitlint": "^19.7.1",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-git": "^1.11.0",
     "husky": "^9.1.7",
     "typescript": "^5.7.3"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-git"
     }
   },
   "dependencies": {
