--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/js": "^9.21.0",
     "commitizen": "^4.3.1",
     "commitlint": "^19.7.1",
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.11.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "typescript": "^5.7.3"
+    "prettier": "^3.5.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1"
   },
   "config": {
     "commitizen": {
